basic layout, very rough, and doesn't have expansion yet

--- a/EthicalShopping/EthicalShopping/app/manifest.json
+++ b/EthicalShopping/EthicalShopping/app/manifest.json
@@ -1,9 +1,8 @@
 {
-  "name": "Getting Started Example",
+  "name": "Ethicly",
   "version": "1.0",
-  "description": "Build an Extension!",
+  "description": "Conscious consumption through awarness",
   "permissions": ["activeTab", "declarativeContent", "storage"],
-  "options_page": "options.html",
   "background": {
     "scripts": ["background.js"],
     "persistent": false
