--- a/EthicalShopping/EthicalShopping/app/manifest.json
+++ b/EthicalShopping/EthicalShopping/app/manifest.json
@@ -22,5 +22,8 @@
     "48": "images/logo_48.png",
     "128": "images/logo_128.png"
   },
+  "web_accessible_resources": [
+    "company_data.json"
+  ],
   "manifest_version": 2
 }
