--- a/EthicalShopping/EthicalShopping/app/manifest.json
+++ b/EthicalShopping/EthicalShopping/app/manifest.json
@@ -2,13 +2,13 @@
   "name": "Ethicly",
   "version": "1.0",
   "description": "Conscious consumption through awarness",
-  "permissions": ["activeTab", "declarativeContent", "storage"],
+  "permissions": ["activeTab", "declarativeContent", "storage", "tabs"],
   "background": {
     "scripts": ["background.js"],
     "persistent": false
   },
-  "page_action": {
-    "default_popup": "popup.html",
+  "browser_action": {
+    //"default_popup": "popup.html",
     "default_icon": {
       "16": "images/logo_16.png",
       "32": "images/logo_32.png",
