--- a/EthicalShopping/EthicalShopping/EthicalShopping.csproj
+++ b/EthicalShopping/EthicalShopping/EthicalShopping.csproj
@@ -39,7 +39,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Content Include="app\background.js" />
+    <Content Include="app\images\get_started128.png" />
+    <Content Include="app\images\get_started16.png" />
+    <Content Include="app\images\get_started32.png" />
+    <Content Include="app\images\get_started48.png" />
     <Content Include="app\img\icon.png" />
+    <Content Include="app\options.html" />
+    <Content Include="app\options.js" />
     <Content Include="app\popup.html" />
     <Content Include="app\popup.js" />
     <Content Include="Properties\build\lib\Ionic.Zip.DLL" />
@@ -67,7 +74,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>1530</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
