--- a/EthicalShopping/EthicalShopping/app/manifest.json
+++ b/EthicalShopping/EthicalShopping/app/manifest.json
@@ -2,7 +2,7 @@
   "name": "Ethicly",
   "version": "1.0",
   "description": "Conscious consumption through awarness",
-  "permissions": ["activeTab", "declarativeContent", "storage", "tabs"],
+  "permissions": ["activeTab", "declarativeContent", "storage", "tabs", "unlimitedStorage"],
   "background": {
     "scripts": ["background.js"],
     "persistent": false
