--- a/EthicalShopping/EthicalShopping/app/manifest.json
+++ b/EthicalShopping/EthicalShopping/app/manifest.json
@@ -15,6 +15,7 @@
       "128": "images/logo_128.png"
     }
   },
+  "options_page": "options.html",
   "icons": {
     "16": "images/logo_16.png",
     "32": "images/logo_32.png",
